@@ -13,7 +13,8 @@ pod2man --release="$version" --center="remctl" docs/remctl.pod > docs/remctl.1
 pod2man --release="$version" --center="remctl" --section=8 docs/remctld.pod \
     > docs/remctld.8.in
 for doc in remctl remctl_close remctl_command remctl_error remctl_new \
-           remctl_open remctl_output remctl_set_source_ip ; do
+           remctl_open remctl_output remctl_set_ccache \
+           remctl_set_source_ip ; do
     pod2man --release="$version" --center="remctl Library Reference" \
         --section=3 --name=`echo "$doc" | tr a-z A-Z` docs/api/"$doc".pod \
         > docs/api/"$doc".3
