@@ -7,4 +7,5 @@ remctl_new
 remctl_open
 remctl_output
 remctl_result_free
+remctl_set_ccache
 remctl_set_source_ip
